Fixed project titles having too much space

--- a/src/components/Portfolio/Portfolio.module.css
+++ b/src/components/Portfolio/Portfolio.module.css
@@ -12,6 +12,7 @@
 
 .portfolio h3 {
     font-size: 2em;
+    margin-bottom: 0;
 }
 
 .portfolio .buttons {
